tests/parse_only/errors/syn_lex/e2.src
.IPPcode21

DEFVAR GF@123